# scrapy-simple

./: .gitignore  README.md  main.py  pyproject.toml  setup.py
example/: main.py  pipelines.py  spiders.py
example/middlewares/: downloader.py  spider.py
example/spiders/: baidu.py  douban.py
src/scrapy_simple/: item.py
src/scrapy_simple/conf/: default_settings.py  settings.py
src/scrapy_simple/core/: downloader.py  engine.py  pipeline.py  scheduler.py  spider.py
src/scrapy_simple/http/: request.py  response.py
src/scrapy_simple/middlewares/: downloader_middleware.py  spider_middleware.py
src/scrapy_simple/utils/: logger.py
