[project]
name = "scrapy-simple"
version = "1.0.0"
description = "A simple web crawling framework like Scrapy"
authors = [
    {name = "Wytheli",email = "wytheli168@163.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{include = "scrapy_simple", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
